--- a/css/style.css
+++ b/css/style.css
@@ -1,71 +1,133 @@
-body {
-    font-family: 'Montserrat';
-}
-
-.parentContainer {
+.flex-container {
     display: flex;
 }
-.background {
-    width: 100%;
-    height: 1080px;
-    background: linear-gradient(to bottom right, #5BACF0 0%, #075ba2 100%);
-}
 
-h1 { 
-    font-size: 40px;
-    font-weight: bold;
-    color: #ffffff;
-    opacity: 0.75;
-    padding: 75px 0 0 160px;
-}
+/*flex-direction: column, column-reverse, 
+flex-wrap:
+flex-grow:
+flex-shrink:
+flex-basis:
+flex-flow:*/
 
-.content {
+
+.flex-container#topNav {
     display: flex;
-    width: 90%;
-    height: 760px;
-    background: #ffffff;
-    margin: -25px 160px 160px 160px; 
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.navItem {
+    padding: 10px 15px;
+}
+
+img#brand {
+    width: 62px;
+    height: 16.94px;
+}
+.button {
+    padding: 18px 32px 18px 32px;
+    font-size: 16px;
+    color: white;
+    background-color: #0065F2;
+    border-radius: 10px;
+}
+
+.buttonShort {
+    max-width: 60px;
+}
+
+/* SHORT BIO*/
+.flex-container#bitBio {
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#bioText:nth-of-type(1) {
+    flex-basis: 60%; 
+    margin-left: 10%;
+}
+
+.bioImage {
+    width: 350px;
+    height: 371.21px;
+    margin-right: 10%;
+    margin-left: 10%;
+}
+
+/*CLIENTS*/
+
+.flex-container#clientIcons {
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 60px;
+}
+
+/*SIZZLE REEL*/
+.flex-container#sizzleReel {
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-bottom: 60px;
+}
+
+
+.h2 {
+    font-family: Raleway;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+/*CASE STUDY 1*/
+.flex-container#caseStudy1 {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#travelApp:nth-of-type(1) {
+    flex-basis: 60%; 
+    margin-left: 10%;
+}
+
+ #travelApp: {
+    max-width: 100px;
+    justify-content: flex-start;
+}
+
+.travelImage {
+    width: 256px;
+    height: 256px;
+}
+
+#buttonDont {
+    justify-content: flex-end;
+}
+/*CASE STUDY 2*/
+.flex-container#caseStudy2 {
 
 }
 
-#bar {
-    width: 451px;
-    height: 8px;
-    background: #2672B2;
-    margin: 0 0 73px 73px;
+/*FOR HIRE*/
+.flex-container#forHire {
+
 }
 
-h2 {
-    font-size: 45px;
-    font-weight: bold;
-    color: #000000;
-    margin: 80px 0 0 0;
-    padding: 73px 0 0 73px;
+/*HIRE PACKAGE*/
+.flex-container#hirePackage {
+
 }
 
-h3 {
-    font-size: 45px;
-    font-weight:normal;
-    padding: 0 0 0 73px;
+/*STORY ENDS*/
+.flex-container#storyEnds {
+
 }
 
-p {
-    font-size: 29px;
-    margin: 80px;
-}
+/*FOOTER*/
+.flex-container#footer {
 
-.photo {
-    width: 554px;
-    height: 588px;
-    position: relative;
-    left: 975px;
-    bottom: 525px;
-}
-
-.buttons {
-    width: 50px;
-    height: 50px;
-    position: relative;
-    left: 625px;
-    bottom: 450px;
 }
